# OpenGL

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
resources/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: Shader.cpp  Shader.h  main.cpp
